objects/Tax_Code_Exception__c.object
<CustomObject>
    <description>Exceptions to the Tax code</description>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Asset Mgmt Fees</fullName>
                </value>
                <value>
                    <fullName>Bond</fullName>
                </value>
                <value>
                    <fullName>Destination Credit</fullName>
                </value>
                <value>
                    <fullName>Double Time Labor</fullName>
                </value>
                <value>
                    <fullName>Double Time Travel</fullName>
                </value>
                <value>
                    <fullName>Field Supplies</fullName>
                </value>
                <value>
                    <fullName>Freight - New Construction</fullName>
                </value>
                <value>
                    <fullName>Freight - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Holiday Labor</fullName>
                </value>
                <value>
                    <fullName>Holiday Travel</fullName>
                </value>
                <value>
                    <fullName>Overtime Labor</fullName>
                </value>
                <value>
                    <fullName>Overtime Travel</fullName>
                </value>
                <value>
                    <fullName>Parts - New Construction</fullName>
                </value>
                <value>
                    <fullName>Parts - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Pass Through Freight</fullName>
                </value>
                <value>
                    <fullName>Pass Through Labor</fullName>
                </value>
                <value>
                    <fullName>Pass Through Parts</fullName>
                </value>
                <value>
                    <fullName>Pass Through Rentals</fullName>
                </value>
                <value>
                    <fullName>Pass Through Tax</fullName>
                </value>
                <value>
                    <fullName>Permits and Licenses</fullName>
                </value>
                <value>
                    <fullName>Preventative Maintenance</fullName>
                </value>
                <value>
                    <fullName>Preventive Maintenance</fullName>
                </value>
                <value>
                    <fullName>Rental - Equipment</fullName>
                </value>
                <value>
                    <fullName>Rental - New Construction</fullName>
                </value>
                <value>
                    <fullName>Rental - Service and Remodel</fullName>
                </value>
                <value>
                    <fullName>Service Charge</fullName>
                </value>
                <value>
                    <fullName>Service Fee</fullName>
                </value>
                <value>
                    <fullName>Standard Labor</fullName>
                </value>
                <value>
                    <fullName>Standard Travel</fullName>
                </value>
                <value>
                    <fullName>Sublbr - New Construction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Code_Association__c</fullName>
        <label>Tax Code Association</label>
        <referenceTo>Tax_Code_Associations__c</referenceTo>
        <relationshipLabel>Tax Code Exceptions</relationshipLabel>
        <relationshipName>Tax_Code_Exceptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <description>The tax code to be applied to the activity type lines on work orders that match the exception</description>
        <label>Tax Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Tax Code Exception</label>
    <nameField>
        <displayFormat>TCEX-{000000}</displayFormat>
        <label>TaxCodeException No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Code Exceptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>